
[TestNoUnsafeCallRule/invalid-0 - 1]
Diagnostic 1: unsafeCall (3:3 - 3:3)
Message: Unsafe call of a(n) `any` typed value.
   2 | function foo(x: any) {
   3 |   x();
     |   ~
   4 | }
---

[TestNoUnsafeCallRule/invalid-1 - 1]
Diagnostic 1: unsafeCall (3:3 - 3:3)
Message: Unsafe call of a(n) `any` typed value.
   2 | function foo(x: any) {
   3 |   x?.();
     |   ~
   4 | }
---

[TestNoUnsafeCallRule/invalid-2 - 1]
Diagnostic 1: unsafeCall (3:3 - 3:17)
Message: Unsafe call of a(n) `any` typed value.
   2 | function foo(x: any) {
   3 |   x.a.b.c.d.e.f.g();
     |   ~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeCallRule/invalid-3 - 1]
Diagnostic 1: unsafeCall (3:3 - 3:17)
Message: Unsafe call of a(n) `any` typed value.
   2 | function foo(x: any) {
   3 |   x.a.b.c.d.e.f.g?.();
     |   ~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeCallRule/invalid-4 - 1]
Diagnostic 1: unsafeCall (3:3 - 3:5)
Message: Unsafe call of a(n) `any` typed value.
   2 | function foo(x: { a: any }) {
   3 |   x.a();
     |   ~~~
   4 | }
---

[TestNoUnsafeCallRule/invalid-5 - 1]
Diagnostic 1: unsafeCall (3:3 - 3:6)
Message: Unsafe call of a(n) `any` typed value.
   2 | function foo(x: { a: any }) {
   3 |   x?.a();
     |   ~~~~
   4 | }
---

[TestNoUnsafeCallRule/invalid-6 - 1]
Diagnostic 1: unsafeCall (3:3 - 3:5)
Message: Unsafe call of a(n) `any` typed value.
   2 | function foo(x: { a: any }) {
   3 |   x.a?.();
     |   ~~~
   4 | }
---

[TestNoUnsafeCallRule/invalid-7 - 1]
Diagnostic 1: unsafeNew (3:3 - 3:9)
Message: Unsafe construction of a(n) `any` typed value.
   2 | function foo(x: any) {
   3 |   new x();
     |   ~~~~~~~
   4 | }
---

[TestNoUnsafeCallRule/invalid-8 - 1]
Diagnostic 1: unsafeNew (3:3 - 3:11)
Message: Unsafe construction of a(n) `any` typed value.
   2 | function foo(x: { a: any }) {
   3 |   new x.a();
     |   ~~~~~~~~~
   4 | }
---

[TestNoUnsafeCallRule/invalid-9 - 1]
Diagnostic 1: unsafeTemplateTag (3:3 - 3:3)
Message: Unsafe use of a(n) `any` typed template tag.
   2 | function foo(x: any) {
   3 |   x`foo`;
     |   ~
   4 | }
---

[TestNoUnsafeCallRule/invalid-10 - 1]
Diagnostic 1: unsafeTemplateTag (3:3 - 3:7)
Message: Unsafe use of a(n) `any` typed template tag.
   2 | function foo(x: { tag: any }) {
   3 |   x.tag`foo`;
     |   ~~~~~
   4 | }
---

[TestNoUnsafeCallRule/invalid-11 - 1]
Diagnostic 1: unsafeCallThis (4:12 - 4:23)
Message: Unsafe call of a(n) `any` typed value. `this` is typed as `any`.

Help: You can try to fix this by turning on the `noImplicitThis` compiler option, or adding a `this` parameter to the function.
   3 |   methodA() {
   4 |     return this.methodB()
     |            ~~~~~~~~~~~~
   5 |   },

Diagnostic 2: unsafeCallThis (10:12 - 10:15)
Message: Unsafe call of a(n) `any` typed value. `this` is typed as `any`.

Help: You can try to fix this by turning on the `noImplicitThis` compiler option, or adding a `this` parameter to the function.
   9 |   methodC() {
  10 |     return this()
     |            ~~~~
  11 |   }
---

[TestNoUnsafeCallRule/invalid-12 - 1]
Diagnostic 1: unsafeCall (3:1 - 3:5)
Message: Unsafe call of a(n) `error` type typed value.
   2 | let value: NotKnown;
   3 | value();
     | ~~~~~
   4 |       
---

[TestNoUnsafeCallRule/invalid-13 - 1]
Diagnostic 1: unsafeCall (3:1 - 3:1)
Message: Unsafe call of a(n) `Function` typed value.
   2 | const t: Function = () => {};
   3 | t();
     | ~
   4 |       
---

[TestNoUnsafeCallRule/invalid-14 - 1]
Diagnostic 1: unsafeTemplateTag (3:1 - 3:1)
Message: Unsafe use of a(n) `Function` typed template tag.
   2 | const f: Function = () => {};
   3 | f`oo`;
     | ~
   4 |       
---

[TestNoUnsafeCallRule/invalid-15 - 1]
Diagnostic 1: unsafeCall (4:3 - 4:15)
Message: Unsafe call of a(n) `Function` typed value.
   3 | if (typeof maybeFunction === 'function') {
   4 |   maybeFunction('call', 'with', 'any', 'args');
     |   ~~~~~~~~~~~~~
   5 | }
---

[TestNoUnsafeCallRule/invalid-16 - 1]
Diagnostic 1: unsafeCall (4:1 - 4:6)
Message: Unsafe call of a(n) `Function` typed value.
   3 | declare const unsafe: Unsafe;
   4 | unsafe();
     | ~~~~~~
   5 |       
---

[TestNoUnsafeCallRule/invalid-17 - 1]
Diagnostic 1: unsafeTemplateTag (4:1 - 4:6)
Message: Unsafe use of a(n) `Function` typed template tag.
   3 | declare const unsafe: Unsafe;
   4 | unsafe`bad`;
     | ~~~~~~
   5 |       
---

[TestNoUnsafeCallRule/invalid-18 - 1]
Diagnostic 1: unsafeNew (4:1 - 4:12)
Message: Unsafe construction of a(n) `Function` typed value.
   3 | declare const unsafe: Unsafe;
   4 | new unsafe();
     | ~~~~~~~~~~~~
   5 |       
---

[TestNoUnsafeCallRule/invalid-19 - 1]
Diagnostic 1: unsafeNew (6:1 - 6:12)
Message: Unsafe construction of a(n) `Function` typed value.
   5 | declare const unsafe: UnsafeToConstruct;
   6 | new unsafe();
     | ~~~~~~~~~~~~
   7 |       
---

[TestNoUnsafeCallRule/invalid-20 - 1]
Diagnostic 1: unsafeCall (6:1 - 6:6)
Message: Unsafe call of a(n) `Function` typed value.
   5 | declare const unsafe: StillUnsafe;
   6 | unsafe();
     | ~~~~~~
   7 |       
---
